2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEnv.c:	improve environ handling on Mac OS X (adapted
	* unix/tclUnixPort.h:	from Apple changes in Darwin tcl-64).

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes;
	support overriding TCL_PACKAGE_PATH/TCL_MODULE_PATH in environment.

	* unix/configure: autoconf-2.59

2007-08-06  Don Porter  <dgp@users.sourceforge.net>

	* tests/parseExpr.test:	Update source file name of expr parser code.

	* generic/tclCompExpr.c:	Added a "mark" field to the OpNode
	struct, which is used to guide tree traversal.  This field costs
	nothing since alignement requirements used the memory already.
	Rewrote ConvertTreeToTokens() to use the new field, which permitted
	consolidation of utility routines CopyTokens() and
	GenerateTokensForLiteral().

2007-08-06  Kevin B. Kenny  <kennykb@users.sf.net>

	* generic/tclGetDate.y: Added a cast to the definition of YYFREE to
				silence compiler warnings.
	* generic/tclDate.c:	Regenerated
	* win/tclWinTest.c:	Added a cast to the call to 
				GetSecurityDescriptorDacl to silence compiler
				warnings.
	
2007-08-04  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.decls:   Exporting via stubs to help
	* generic/tclInt.h:       itcl adapt to VarReform. Added
	* generic/tclIntDecls.h:  localCache initialization to
	* generic/tclProc.c:      TclInitCompiledLocals (which
	* generic/tclStubInit.c:  only exists for itcl).
	* generic/tclVar.c:


2007-08-01  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/word.tcl: Rewrote for greater efficiency. [Bug 1764318]

2007-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclInt.h:     Added a TclOffset macro ala Tk_Offset to
	* generic/tclVar.c:     abstract out 'offsetof' which may not be