@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStubInit.c,v 1.142 2007/08/04 18:32:28 msofer Exp $
+ * RCS: @(#) $Id: tclStubInit.c,v 1.143 2007/08/07 17:28:39 msofer Exp $
  */
 
 #include "tclInt.h"
@@ -324,6 +324,7 @@ TclIntStubs tclIntStubs = {
     TclEvalObjEx, /* 232 */
     TclGetSrcInfoForPc, /* 233 */
     TclVarHashCreateVar, /* 234 */
+    TclInitVarHashTable, /* 235 */
 };
 
 TclIntPlatStubs tclIntPlatStubs = {
